GNOME Bugzilla – Bug 745143
baseparse: Don't emit errors on EOS if we saw GAP events
Last modified: 2015-02-26 10:23:19 UTC
If we saw GAP events (meaning the streams is advancing) before we get EOS, we should not post an ERROR, since it is not fatal.
Created attachment 297948 [details] [review] baseparse: Don't emit errors on EOS if we saw GAP events If we saw GAP events (meaning the streams is advancing) before we get EOS, we should not post an ERROR, since it is not fatal.
commit c1d2254b23c1ca631c28ebe14dea2f0e1c9bc1a2 Author: Edward Hervey <bilboed@bilboed.com> Date: Wed Oct 22 16:43:43 2014 +0200 baseparse: Don't emit errors on EOS if we saw GAP events If we saw GAP events (meaning the streams is advancing) before we get EOS, we should not post an ERROR, since it is not fatal. https://bugzilla.gnome.org/show_bug.cgi?id=745143